When DNS records are modified in a virtual server, all records are synchronized into any alias domains.
Changed the default email folder names to Junk, Trash, Drafts, Sent and Virus.
Added an option to the Spam and Virus Scanning page to control what happens when email is sent to a mailbox that is over quota (bouncing or queueing for later).
---- Changes since 3.99 ----
Updated the Django script installer to version 1.5.1, SugarCRM to 6.5.12, Mediawiki to 1.20.4 and 1.19.5, PiWik to 1.11.1, Drupal to 7.22, phpScheduleIt to 2.4.1, Moodle to 2.4.3, Typo3 to 4.6.18, phpScheduleIt to 2.4.1, FengOffice to 2.2.4.1, Dolibarr to 3.3.1, Gallery to 3.0.7, TikiWiki to 10.2, CMS Made Simple to 1.11.6, RoundCube to 0.9.0, Nucleus to 3.65, phpMyAdmin to 3.5.8.1, Mantis to 1.2.15, phpPgAdmin to 5.1, FosWiki to 1.1.8, Joomla to 3.1.0, and ZenPhoto to version 1.4.4.4.
If Webmin's BIND module is configured to use the SPF type for Sender Permitted From records, Virtualmin will create both SPF and TXT records for domains.
Added a field to the DKIM page for entering domains to exclude from signing and DNS record creation.
Added buttons to the Scheduled Backups page to enable or disable backups, and a button on the Edit Scheduled Backup page to clone a backup configuration.
---- Changes since 4.00 ----
Updated the ZenPhoto script installer to version 1.4.4.5, Joomla to 3.1.1 and 2.5.11, MediaWiki to 1.21.0 and 1.19.7, phpMyAdmin to 4.0.2, eGroupWare to 1.8.004, DokuWiki to 2013-05-10, Moodle to 2.4.4, SugarCRM to 6.5.13, Roundcube to 0.9.1, FengOffice to 2.3, Dolibarr to 3.3.2, Coppermine to 1.5.24, CMS Made Simple to 1.11.7, PiWik to 1.12, and PHPList to 2.11.10.
German translation updates, thanks to Raymond Vetter.
The default external IP address (for use in DNS records) can now be specified on a per-reseller basis.
Added the Amazon S3 Buckets page, for setting bucket ACLs, scheduled deletion and Glacier move rules.