@@ -1,0 +1,9 @@
+<header>Delete and re-create virtual servers?</header>
+
+By default, if the domain already exists Virtualmin will just restore the
+backup over it. This means that any files in the domain's home directory that
+were not included in the backup will still exist after the restore. To force
+the domain to be deleted before restoring, change this option to <b>Yes</b>.
+<p>
+
+<footer>
