@@ -2384,6 +2384,7 @@ restore_dirchown=Reset file ownerships
 restore_reuid=Re-allocate UIDs and GID?
 restore_fix=Just re-import server details?
 restore_only=Only create servers with selected features?
+restore_delete=Delete and re-create virtual servers?
 restore_virtualmin=Virtualmin settings to restore
 restore_dnswholefile=Restore everything in DNS zone file
 restore_newip=IP address for restored servers
@@ -2424,6 +2425,7 @@ restore_first2=Extracting backup archive files ..
 restore_firstfailed=.. extraction of $1 failed : $2
 restore_badkey=.. backup was not signed with key $1 : $2
 restore_missinginfo=Backup does not contain virtual server information for missing domain $1.
+restore_deletefirst=Deleting virtual server $1 ..
 restore_createdomain=Re-creating virtual server $1 ..
 restore_epar=.. the original parent virtual server does not exist
 restore_elimit=.. creation would exceed your virtual server limit of $1
