@@ -149,6 +149,10 @@ if ($crmode == 1) {
 	print &ui_table_row(&hlink($text{'restore_only'}, "restore_only"),
 			    &ui_yesno_radio("only", 0));
 
+	# Delete before restoring
+	print &ui_table_row(&hlink($text{'restore_delete'}, "restore_delete"),
+			    &ui_yesno_radio("delete_existing", 0));
+
 	# IP address for restored domains
 	if (&can_select_ip()) {
 		@cantmpls = ( &get_template(0) );
